# OncoNLP

./: .gitignore  README.md  pyproject.toml
Code/: base_line.py  contextual_embeddings_bert.py  contextual_embeddings_elmo.py  ml_models.py  preproc.py  vectorize.py
Data/processed/: X_test_bert_mean.npy
Notebooks/: 01_EDA.ipynb  02_base_line.ipynb  03_contextual_embeddings.ipynb  03_preprocessing.ipynb  03_text_vectorization.ipynb  04_ML_models.ipynb  04_contextual_embbedings_bert.ipynb  04_contextual_embeddings.ipynb  05_contextual_embeddings_elmo.py  06_CNNs.ipynb  08_LSTM.ipynb  09_Bi-LSTM.ipynb  11_BERT_Classification.ipynb  12_BioBERT_Classificiation.ipynb  Bonus_01_evaluation_phase.ipynb
Results/Metrics/: bert_results.csv  biobert_results.csv
Results/Outputs/: output.csv
