[project]
name = "onconlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "numpy>=2.0.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "jupyterlab>=4.0.0",
    "ipywidgets>=8.0.0",
    "ipykernel>=6.0.0",
    "spacy>=3.7.0",
    "torch>=2.11.0",
    "transformers>=5.4.0",
    "en-core-web-sm",
    "tensorflow>=2.21.0",
    "tensorflow-hub>=0.16.1",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
