[project]
name = "onconlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "numpy>=2.0.0,<2.5.0",
    "matplotlib>=3.10.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.4.0",
    "seaborn>=0.13.0",
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "jupyterlab>=4.0.0",
    "ipywidgets>=8.0.0",
    "ipykernel>=6.0.0",
    "spacy>=3.7.0",
    "torch>=2.6.0,<2.7.0",
    "torchvision>=0.21.0,<0.22.0",
    "torchaudio>=2.6.0,<2.7.0",
    "transformers>=4.40.0",
    "en-core-web-sm",
    "tensorflow>=2.16.0",
    "tensorflow-hub>=0.16.1",
    "gensim>=4.3.0",
    "pip>=24.0",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true